--- a/content/daily/2021-05-23.html
+++ b/content/daily/2021-05-23.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2022-10-23 02:56 -->
+<!-- 2022-10-23 21:25 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>不造写啥标题</title>
@@ -36,12 +36,12 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org3f9d79e">1. 学到了 Emacs - 这次主要是和窗口有关的</a>
+<li><a href="#orgb7ba95e">1. 学到了 Emacs - 这次主要是和窗口有关的</a>
 <ul>
-<li><a href="#org1e225eb">1.1. window config &amp; register</a></li>
-<li><a href="#org35f3919">1.2. <code>C-x 4</code> prefix</a></li>
-<li><a href="#org69e57d7">1.3. ace-window - Quickly switch windows in Emacs</a></li>
-<li><a href="#org139b08b">1.4. winner-mode - Undo &amp; redo window changes</a></li>
+<li><a href="#orga349658">1.1. window config &amp; register</a></li>
+<li><a href="#org00fcf6a">1.2. <code>C-x 4</code> prefix</a></li>
+<li><a href="#orgd7d5506">1.3. ace-window - Quickly switch windows in Emacs</a></li>
+<li><a href="#orgc284f32">1.4. winner-mode - Undo &amp; redo window changes</a></li>
 </ul>
 </li>
 </ul>
@@ -49,12 +49,12 @@
 </nav>
 <hr style="width: 80%;">
 
-<div id="outline-container-org3f9d79e" class="outline-2">
-<h2 id="org3f9d79e"><span class="section-number-2">1.</span> <a href="#org3f9d79e">学到了 Emacs - 这次主要是和窗口有关的</a></h2>
+<div id="outline-container-orgb7ba95e" class="outline-2">
+<h2 id="orgb7ba95e"><span class="section-number-2">1.</span> <a href="#orgb7ba95e">学到了 Emacs - 这次主要是和窗口有关的</a></h2>
 <div class="outline-text-2" id="text-1">
 </div>
-<div id="outline-container-org1e225eb" class="outline-3">
-<h3 id="org1e225eb"><span class="section-number-3">1.1.</span> <a href="#org1e225eb">window config &amp; register</a></h3>
+<div id="outline-container-orga349658" class="outline-3">
+<h3 id="orga349658"><span class="section-number-3">1.1.</span> <a href="#orga349658">window config &amp; register</a></h3>
 <div class="outline-text-3" id="text-1-1">
 <dl class="org-dl">
 <dt><code>C-x r w</code> (<code>window-configuration-to-register</code>)</dt><dd>Store the window
@@ -68,8 +68,8 @@ restore that frame or all frames accordingly.</dd>
 </div>
 </div>
 
-<div id="outline-container-org35f3919" class="outline-3">
-<h3 id="org35f3919"><span class="section-number-3">1.2.</span> <a href="#org35f3919"><code>C-x 4</code> prefix</a></h3>
+<div id="outline-container-org00fcf6a" class="outline-3">
+<h3 id="org00fcf6a"><span class="section-number-3">1.2.</span> <a href="#org00fcf6a"><code>C-x 4</code> prefix</a></h3>
 <div class="outline-text-3" id="text-1-2">
 <dl class="org-dl">
 <dt><code>C-x 4 f</code>, <code>C-x 4 C-f</code> (<code>find-file-other-window</code>)</dt><dd>Find file by
@@ -92,8 +92,8 @@ log 有关系，8清楚。</dd>
 </div>
 </div>
 
-<div id="outline-container-org69e57d7" class="outline-3">
-<h3 id="org69e57d7"><span class="section-number-3">1.3.</span> <a href="#org69e57d7"><a href="https://github.com/abo-abo/ace-window">ace-window - Quickly switch windows in Emacs</a></a></h3>
+<div id="outline-container-orgd7d5506" class="outline-3">
+<h3 id="orgd7d5506"><span class="section-number-3">1.3.</span> <a href="#orgd7d5506"><a href="https://github.com/abo-abo/ace-window">ace-window - Quickly switch windows in Emacs</a></a></h3>
 <div class="outline-text-3" id="text-1-3">
 <div class="org-src-container">
 <pre class="src src-elisp">(global-set-key (kbd <span style="font-style: italic;">"M-o"</span>) 'ace-window)
@@ -106,8 +106,8 @@ log 有关系，8清楚。</dd>
 </div>
 </div>
 
-<div id="outline-container-org139b08b" class="outline-3">
-<h3 id="org139b08b"><span class="section-number-3">1.4.</span> <a href="#org139b08b"><a href="https://www.emacswiki.org/emacs/WinnerMode">winner-mode - Undo &amp; redo window changes</a></a></h3>
+<div id="outline-container-orgc284f32" class="outline-3">
+<h3 id="orgc284f32"><span class="section-number-3">1.4.</span> <a href="#orgc284f32"><a href="https://www.emacswiki.org/emacs/WinnerMode">winner-mode - Undo &amp; redo window changes</a></a></h3>
 <div class="outline-text-3" id="text-1-4">
 <div class="org-src-container">
 <pre class="src src-elisp">(winner-mode +1)
@@ -126,7 +126,7 @@ log 有关系，8清楚。</dd>
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2021-05-23 10:20</td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-10-10 12:17</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-10-23 02:56</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-10-23 21:25</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/daily/2021-05-23.org">content/daily/2021-05-23.org</a></td></tr>
 </table>
